force-app/main/default/objects/Bill_Check_Payments__c/Bill_Check_Payments__c.object-meta.xml
<CustomObject>
    <label>Bill Check Payment</label>
    <nameField>
        <displayFormat>CHK-{00000000}</displayFormat>
        <label>Bill Check Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Check Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>