force-app/main/default/objects/Bill_Check_Payments__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <label>Bill</label>
    <referenceTo>cllease__Lease_account_Due_Details__c</referenceTo>
    <relationshipLabel>Bill Check Payments</relationshipLabel>
    <relationshipName>Bill_Check_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>